// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should render TextInput with label 1`] = `
<div
  className="InputWithLabel"
>
  <input
    className="Input"
    id="input"
    onChange={[Function]}
    placeholder="test"
    type="text"
    value=""
  />
</div>
`;

exports[`TextInput should render TextInput without label 1`] = `
<div
  className="InputWithLabel"
>
  <input
    className="Input"
    id="input"
    onChange={[Function]}
    placeholder={null}
    type="text"
    value=""
  />
</div>
`;
